<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_shape"
    android:padding="20dp"
    tools:context=".activities.Login">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:text="@string/slogan"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextWhite"

            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dim_white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextWhite"
            android:layout_margin="0dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPwrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dim_white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="PasswordReset"
            android:padding="10dp"
            android:text="Forgot Password?"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonWhite"
            android:layout_marginBottom="5dp"
            android:onClick="LoginAction"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="Register"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_round_arrow_forward_24" />

    </LinearLayout>

</FrameLayout>